added the socialMenu

--- a/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
+++ b/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
@@ -44,15 +44,7 @@
                       </div>
 
                       <div class="col-md-6 col-sm-6 col-xs-6 pull-right">
-                          <div class="social">
-                              <ul class="social-share">
-                                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                  <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                              </ul>
-                          </div>
+                          @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/SocialMenu.cshtml")
                       </div>
                   </div>
                   <!--/.container-->
