--- a/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
+++ b/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
@@ -101,25 +101,7 @@
       <section id="landing">
           <div class="container-fluid">
               <!-- about us slider -->
-              <div id="about-slider">
-                  <div id="carousel-slider" class="carousel slide" data-ride="carousel">
-                      <!-- Indicators -->
-                      <ol class="carousel-indicators visible-xs">
-                          <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
-                          <li data-target="#carousel-slider" data-slide-to="1"></li>
-                          <li data-target="#carousel-slider" data-slide-to="2"></li>
-                          <li data-target="#carousel-slider" data-slide-to="3"></li>
-                      </ol>
-                      <div class="carousel-inner">
-                          <div class="item active"> <img src="images/slider1.jpg" class="img-responsive" alt=""> </div>
-                          <div class="item"> <img src="images/slider2.jpg" class="img-responsive" alt=""> </div>
-                          <div class="item"> <img src="images/slider3.jpg" class="img-responsive" alt=""> </div>
-                          <div class="item"> <img src="images/slider4.jpg" class="img-responsive" alt=""> </div>
-                      </div>
-                      <a class="left carousel-control hidden-xs" href="#carousel-slider" data-slide="prev"> <i class="fa fa-angle-left"></i> </a> <a class=" right carousel-control hidden-xs" href="#carousel-slider" data-slide="next"> <i class="fa fa-angle-right"></i> </a>
-                  </div>
-                  <!--/#carousel-slider-->
-              </div>
+              @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/Carousel.cshtml")
           </div>
           <!--/#about-slider-->
       </section>
