--- a/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
+++ b/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
@@ -214,19 +214,7 @@
             <div class="row">
                 <div class="col-md-5 col-sm-3 col-xs-12"> &copy; 2017 <a target="_blank" href="Home.html" title="Himalayan Holidays">Himalayan Holidays</a>. All Rights Reserved. </div>
                 <div class="col-md-5 col-sm-7 col-xs-12">
-                    <div class="footer-link">
-                        <ul class="footer-link-left">
-                            <li class="active"><a href="Home.html">Home</a></li>
-                            <li><a href="Holiday-List.html">Holiday List</a></li>
-                            <li><a href="HolidayParallax.html">Holidays</a></li>
-                            <li><a href="BikeParallax.html">Bikes</a></li>
-                            <li><a href="About-us.html">About Us</a></li>
-                            <li><a href="contact-us.html">Contact</a></li>
-                        </ul>
-
-
-                    </div>
-
+                    @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/FooterMenu.cshtml")
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-12">
                     <a class="navbar-brand" href="Home.html"><img src="images/HH/hhlogo.PNG" alt="logo" class="img-responsive"></a>
