--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/Carousel.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/Carousel.cshtml
@@ -1,25 +1,61 @@
 ﻿@using Sitecore.Mvc
 @using Sitecore.Mvc.Presentation
+@using Sitecore.Data.Items
+@using Sitecore.Data.Fields
+@using Sitecore.Extension.Data.Fields
+
 @model RenderingModel
 @{
-
+    Item carouselItem = Sitecore.Context.Database.GetItem("{C1ED514F-5F7D-4FBF-B25B-A77224576629}");
+    LinkField crouselLink = null;
+    int cnt = 0;
+    int cntImage = 0;
 }
 <div id="about-slider">
     <div id="carousel-slider" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
+
+
         <ol class="carousel-indicators visible-xs">
-            <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-slider" data-slide-to="1"></li>
-            <li data-target="#carousel-slider" data-slide-to="2"></li>
-            <li data-target="#carousel-slider" data-slide-to="3"></li>
+            @foreach (Item carousel in carouselItem.Children)
+            {
+                if (cnt == 0)
+                {
+
+                    <li data-target="#carousel-slider" data-slide-to="@cnt" class="active"></li>
+                }
+                else
+                {
+                    <li data-target="#carousel-slider" data-slide-to="@cnt"></li>
+                }
+                cnt++;
+                crouselLink = carousel.Fields["Link Url"];
+
+            }
+
         </ol>
+
         <div class="carousel-inner">
-            <div class="item active"> <img src="images/slider1.jpg" class="img-responsive" alt=""> </div>
-            <div class="item"> <img src="images/slider2.jpg" class="img-responsive" alt=""> </div>
-            <div class="item"> <img src="images/slider3.jpg" class="img-responsive" alt=""> </div>
-            <div class="item"> <img src="images/slider4.jpg" class="img-responsive" alt=""> </div>
+
+            @foreach (Item carouselImage in carouselItem.Children)
+            {
+                if (cntImage == 0)
+                {
+
+                    <div class="item active">  @Html.Sitecore().Field("Image", carouselImage, new { @class = "img-responsive" })</div>
+                }
+                else
+                {
+                    <div class="item">  @Html.Sitecore().Field("Image", carouselImage, new { @class = "img-responsive" }) </div>
+                }
+                cntImage++;
+
+            }
+
         </div>
+
         <a class="left carousel-control hidden-xs" href="#carousel-slider" data-slide="prev"> <i class="fa fa-angle-left"></i> </a> <a class=" right carousel-control hidden-xs" href="#carousel-slider" data-slide="next"> <i class="fa fa-angle-right"></i> </a>
+
     </div>
     <!--/#carousel-slider-->
 </div>
