--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/FeaturedBike.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/FeaturedBike.cshtml
@@ -1,58 +1,44 @@
 ﻿@using Sitecore.Mvc
-@using Sitecore.Mvc.Presentation
+@using Sitecore.Mvc.Analytics
+@using Sitecore.Data.Items
+@using Sitecore.Data.Fields
 @model RenderingModel
 @{
-
+    Item theFeaturedBikes = Sitecore.Context.Database.GetItem("{999AA80D-E91A-4E36-9048-A24CE3C60786}");
 }
 <div class="skill-wrap clearfix">
     <div class="center wow fadeInDown">
-        <h2 class="text-upper">Featured Bikes</h2>
+        <h2 class="text-upper">@Html.Sitecore().Field("Title", theFeaturedBikes)</h2>
         <p class="lead">
-            The Himalayan Holidays offers Himalayan Motorcycle Adventure Tours that let's you experience the best of Indian Himalayas. <br>
-            Bike Holidays
+            @Html.Sitecore().Field("Text",theFeaturedBikes)
+           
         </p>
         <div class="row clearfix">
-            <div class="col-md-6 col-sm-6 col-xs-12 cont-col-inner">
-                <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                    <h2 class="title-bg">Thunderbird</h2>
-                    <div class="media">
-                        <div class="pull-center">
-                            <a href="HolidayDetails.html">
-                                <img src="images/Royal-Enfiled-green.jpg" class="img-responsive" alt="">
-                                <span class="cherry-quick-view">Quick view</span>
-                            </a>
+            @foreach (Item theFeaturedBike in ((MultilistField)theFeaturedBikes.Fields["Featured Bike List"]).GetItems())
+            {
+                <div class="col-md-6 col-sm-6 col-xs-12 cont-col-inner">
+                    <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <h2 class="title-bg">@Html.Sitecore().Field("Summary Title",theFeaturedBike)</h2>
+                        <div class="media">
+                            <div class="pull-center">
+                                <a href="HolidayDetails.html">
+                                    @Html.Sitecore().Field("Image", theFeaturedBike, new {@class="img-responsive" })
+                               
+                                    <span class="cherry-quick-view">Quick view</span>
+                                </a>
+                            </div>
+                            <h5>@Html.Sitecore().Field("Bike Full Name", theFeaturedBike)</h5>
+
                         </div>
-                        <h5>Royal Enfield - Thunderbird</h5>
-
+                        <!--/.media -->
+                        <p>
+                            @Html.Sitecore().Field("Summary Text", theFeaturedBike)
+                        </p>
                     </div>
-                    <!--/.media -->
-                    <p>
-                        The all new Royal Enfield Thunderbird now with a powerful 350 cc engine, a 20 litre tank, digital meter console and LED tail lamps gives a new definition to Highway cruising.
-
-                        Perhaps one of the most anticipated models from the Royal Enfield stable, Thunderbird 350 is poised to enhance the pleasure of leisure motorcycling amongst the touring enthusiasts. Thunderbird 350 with its distinctive "black" styling is all set to make a distinct statement on the roads.
-                    </p>
                 </div>
-            </div>
-            <!--/.col-lg-6 -->
-            <div class="col-md-6 col-sm-6 col-xs-12 cont-col-inner">
-                <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                    <h2 class="title-bg">Bullet Chrome</h2>
-                    <div class="media">
-                        <div class="pull-center">
-                            <a href="HolidayDetails.html">
-                                <img src="images/Royal-Enfiled-silver.jpg" class="img-responsive" alt="">
-                                <span class="cherry-quick-view ">Quick view</span>
-                            </a>
-                        </div>
-                        <h5>Royal Enfield - Machismo</h5>
+            }
 
-                    </div>
-                    <!--/.media -->
-                    <p>Patterned in the excellent line of the Standard Bullet and Thunderbird, Machismo 350 is a well-made motorcycle powered by a refined 346cc lean burn engine of single cylinder, 4 stroke and air-cooled set up. The petrol tank displays a sparkling aspect with the beautiful stroke of chrome paint. The options of windshield and saddlebag add to the aggressive persona and complete look of the bike. </p>
-                </div>
-            </div>
-
-            <!--/.col-lg-6 -->
+            
         </div>
     </div>
 </div>
