Did basic dynamic layout out

--- a/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
+++ b/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
@@ -67,68 +67,12 @@
             </div>
         </div>
     </header>
-    <!--/header-->
-    <section id="landing">
-        <div class="container-fluid">
-            <!-- about us slider -->
-            @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/Carousel.cshtml")
-        </div>
-        <!--/#about-slider-->
-    </section>
-    <section>
-        <div class="container">
-            <!-- Our Skill -->
-            <div class="skill-wrap clearfix">
-                <div class="container">
-                    <!-- Our Skill -->
-                    @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/FeaturedBike.cshtml")
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--/nav-->
+  
+  
+    @Html.Sitecore().Placeholder("maincontainer")
    
     
-    
-    <!--/header-->
-   
-    <section>
-        <div class="container">
-            <!--/.our-skill-->
-            <!-- our-team -->
-            @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml")
-            <!--section-->
-        </div>
-        <!--/.container-->
-    </section>
-    <section>
-        <div class="container">
 
-            <div class="news-testimonial padding-top0">
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-xs-12 ">
-                        @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/NewsLetter.cshtml")
-                    </div>
-                    <!--/.col-lg-4 -->
-                    <!--/.col-lg-4 -->
-                    <!--/.row -->
-                    <!--skill_border-->
-                    <div class="col-md-6 col-sm-6 col-xs-12 ">
-                        <div class=" wow fadeInDown" data-wow-duration="1200ms" data-wow-delay="400ms">
-                            @Html.Sitecore().ViewRendering("~/Views/Renderings/HimalayanHolidays/Testimonials.cshtml")
-                        </div>
-                    </div>
-                </div>
-                <div class="row clearfix"> </div>
-
-                <!--/.row-->
-            </div>
-
-
-            <!--section-->
-        </div>
-        <!--/.container-->
-    </section>
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
