--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/Map.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/Map.cshtml
@@ -4,5 +4,8 @@
 @{
 
 }
+<div class="center wow fadeInDown team marginTop30 holidayspage">
+    <h2 class="text-upper">Contact Himalayan Holidays</h2>
 
     <div id="googleMap"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56062.112147291475!2d77.01221375701635!3d28.57330560483417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1a9c31eec4e1%3A0x39493976cba4c89a!2sDwarka%2C+New+Delhi%2C+Delhi!5e0!3m2!1sen!2sin!4v1486628901867" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+</div>
