resolve the error

--- a/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
+++ b/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
@@ -73,7 +73,7 @@
 
     @*@Html.Sitecore().Placeholder("maincontainer")*@
 
-    @Html.Sitecore().DynamicPlaceholder("maincontainer")
+    @Html.Sitecore().Placeholder("maincontainer")
 
 
     <footer id="footer" class="midnight-blue">
