remove dynamic placeholder

--- a/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
+++ b/HimalayanHolidays/Views/Layouts/HimalayanHolidays/HHResponsiveLayout.cshtml
@@ -71,9 +71,9 @@
     </header>
 
 
-    @*@Html.Sitecore().Placeholder("maincontainer")*@
+    @Html.Sitecore().Placeholder("maincontainer")
 
-    @Html.Sitecore().DynamicPlaceholder("maincontainer")
+    @*@Html.Sitecore().DynamicPlaceholder("maincontainer")*@
 
 
     <footer id="footer" class="midnight-blue">
