--- a/HimalayanHolidays/Views/Renderings/HTMLStructures/ThreeColumn.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HTMLStructures/ThreeColumn.cshtml
@@ -6,11 +6,11 @@
 
 }
 <div class="col-sm-12 col-md-3 col-xs-12">
-    @Html.Sitecore().DynamicPlaceholder("leftColumn")
+    @Html.Sitecore().Placeholder("leftColumn")
 </div>
 <div class="col-sm-12 col-md-6 col-xs-12">
-    @Html.Sitecore().DynamicPlaceholder("contentColumn")
+    @Html.Sitecore().Placeholder("contentColumn")
 </div>
 <div class="col-sm-12 col-md-3 col-xs-12">
-    @Html.Sitecore().DynamicPlaceholder("rightColumn")
+    @Html.Sitecore().Placeholder("rightColumn")
 </div>
