--- a/HimalayanHolidays/Views/Renderings/HTMLStructures/TwoColumn.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HTMLStructures/TwoColumn.cshtml
@@ -5,9 +5,9 @@
 @{
 
 }
-<div class="col-sm-12 col-md-6 col-xs-12">
+<div class="col-sm-12 col-md-6 col-xs-12" style="min-height:30px">
     @Html.Sitecore().DynamicPlaceholder("leftColumn")
 </div>
-<div class="col-sm-12 col-md-6 col-xs-12">
-    @Html.Sitecore().DynamicPlaceholder("rightColumn")
+<div class="col-sm-12 col-md-6 col-xs-12" style="min-height:30px">
+    @Html.Sitecore().Placeholder("rightColumn")
 </div>
