--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/PrimaryMenu.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/PrimaryMenu.cshtml
@@ -1,26 +1,83 @@
 ﻿@using Sitecore.Mvc
 @using Sitecore.Mvc.Presentation
+@using Sitecore.Data.Items
+@using Sitecore.Links
 @model RenderingModel
 @{
-
+    var startItem = Sitecore.Context.Database.GetItem(Sitecore.Context.Site.StartPath);
 }
+@*<nav class="navbar navbar-default navbar-inverse pull-right">
+        <div class="">
+            <ul class="nav navbar-nav sf-menu" data-type="navbar">
+                <li class="active"><a href="Home.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="Holiday-List.html">Holiday List <i class="fa" aria-hidden="true"></i></a>
+                    <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                        <li><a href="#">Himachal Holidays</a></li>
+                        <li><a href="#">Kashmir Holidays</a></li>
+                        <li><a href="#">Explore North-East</a></li>
+                        <li class="divider"></li>
+                    </ul>
+                </li>
+                <li><a href="HolidayParallax.html">Holidays</a></li>
+                <li><a href="BikeParallax.html">Bikes</a></li>
+                <li><a href="About-us.html">About Us</a></li>
+                <li><a href="contact-us.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>*@
+
 <nav class="navbar navbar-default navbar-inverse pull-right">
     <div class="">
         <ul class="nav navbar-nav sf-menu" data-type="navbar">
+
             <li class="active"><a href="Home.html">Home</a></li>
-            <li class="dropdown">
-                <a href="Holiday-List.html">Holiday List <i class="fa" aria-hidden="true"></i></a>
-                <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-                    <li><a href="#">Himachal Holidays</a></li>
-                    <li><a href="#">Kashmir Holidays</a></li>
-                    <li><a href="#">Explore North-East</a></li>
-                    <li class="divider"></li>
-                </ul>
-            </li>
-            <li><a href="HolidayParallax.html">Holidays</a></li>
-            <li><a href="BikeParallax.html">Bikes</a></li>
-            <li><a href="About-us.html">About Us</a></li>
-            <li><a href="contact-us.html">Contact</a></li>
+            @foreach (Item item in startItem.Children)
+            {
+                <li class="dropdown">
+                    <a href="@Sitecore.Links.LinkManager.GetItemUrl(item)">
+                        @{
+                            if (item.Fields["Title"].HasValue && item.Fields["Title"].Value != "")
+                            {
+                                @Html.Sitecore().Field("Title", item)
+
+                               
+                                if (item.HasChildren)
+                                {
+                                    <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+
+                                        @for (int child = 0; child < item.Children.Count; child++)
+                                        {
+                                            <li><a href="@Sitecore.Links.LinkManager.GetItemUrl(item.Children[child])">@item.Children[child].Name</a></li>
+
+
+
+                                        }
+                                    </ul>
+                                }
+
+                            }
+                        }
+                    </a>
+                </li>
+            }
+            @*<li class="active"><a href="Home.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="Holiday-List.html">Holiday List <i class="fa" aria-hidden="true"></i></a>
+                    <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                        <li><a href="#">Himachal Holidays</a></li>
+                        <li><a href="#">Kashmir Holidays</a></li>
+                        <li><a href="#">Explore North-East</a></li>
+                        <li class="divider"></li>
+                    </ul>
+                </li>
+                <li><a href="HolidayParallax.html">Holidays</a></li>
+                <li><a href="BikeParallax.html">Bikes</a></li>
+                <li><a href="About-us.html">About Us</a></li>
+                <li><a href="contact-us.html">Contact</a></li>*@
         </ul>
     </div>
 </nav>
+
+
+
