--- a/HimalayanHolidays/Views/GlassBase/Index.cshtml
+++ b/HimalayanHolidays/Views/GlassBase/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Sitecore.Mvc
+﻿
+@using Sitecore.Mvc
 @using Sitecore.Mvc.Presentation
 @using Glass.Mapper.Sc
 @using HimalayanHolidays
@@ -10,5 +11,5 @@
     <h2 class="text-upper">  @Html.Glass().Editable(x => x.Title)</h2>
 
     @*<img src="images/HH/forest-biking.png" class="right img-responsive">
-    @Html.Glass().Editable(x => x.Text)*@
+        @Html.Glass().Editable(x => x.Text)*@
 </div>
