--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     <div class="des-cont">
                         <p>
-                            "hello world ,this id for demo"
+                            "....hello world ,this id for demo. Today is the first Day of this training"
                             “We live in a wonderful world that is full of beauty, charm and adventure. There is no end to the adventures we can have if only we seek them with our eyes open.”
                         </p>
                         <p>The package of Himalayan Holidays is great and they didn't hid anything - Satish </p>
