--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
@@ -7,7 +7,9 @@
 <div class="team">
     <div class="center wow fadeInDown">
         <h2 class="text-upper">Happy Customers</h2>
-        <p class="lead">See what our satisfied customers says? </p>
+        <p class="lead">See what our satisfied customers says? 
+        " hii all team member"
+        </p>
     </div>
     <div class="row clearfix box-height-home">
         <div class="col-md-4 col-sm-4 col-xs-12 banner-wrap ">
