--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
@@ -27,8 +27,9 @@
                     </div>
                     <div class="des-cont">
                         <p>
+
                             "....hello world ,this id for demo. Today is the first Day of this training"
-                            "New Line Addeds"
+                            "New Line Addeds ::::::::::::::"
                             "hello world ,this id for demo.............................."
                             “We live in a wonderful world that is full of beauty, charm and adventure. There is no end to the adventures we can have if only we seek them with our eyes open.”
                         </p>
