--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
@@ -30,7 +30,7 @@
 
                             "....hello world ,this id for demo. Today is the first Day of this training"
                             "New Line Addeds ::::::::::::::"
-                            "hello world ,this id for demo.............................."
+                            "hello world ,this id for demo..............................nv nbsnv "
                             “We live in a wonderful world that is full of beauty, charm and adventure. There is no end to the adventures we can have if only we seek them with our eyes open.”
                         </p>
                         <p>The package of Himalayan Holidays is great and they didn't hid anything - Satish </p>
