Commited Complete by Pradeep

--- a/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
+++ b/HimalayanHolidays/Views/Renderings/HimalayanHolidays/HappyCustomers.cshtml
@@ -27,7 +27,7 @@
                     </div>
                     <div class="des-cont">
                         <p>
-
+                            "..... Hii This is best learninfg portal for github"
                             "....hello world ,this id for demo. Today is the first Day of this training"
                             "New Line Addeds ::::::::::::::"
                             "hello world ,this id for demo..............................nv nbsnv "
